--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-    "name": "caculation",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack",
-        "dev": "node_modules/.bin/webpack-dev-server"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "echarts": "^3.7.0",
-        "vis": "^4.20.1",
-        "vue": "^2.4.2",
-        "vue-router": "^2.7.0"
-    },
-    "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "css-loader": "^0.28.5",
-        "file-loader": "^0.11.2",
-        "html-webpack-plugin": "^2.30.1",
-        "style-loader": "^0.18.2",
-        "vue-loader": "^13.0.4",
-        "vue-template-compiler": "^2.4.2",
-        "webpack": "^3.5.5",
-        "webpack-dev-server": "^2.7.1"
-    }
+  "name": "caculation",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "dev": "node_modules/.bin/webpack-dev-server"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "echarts": "^3.7.0",
+    "vis": "^4.20.1",
+    "vue": "^2.4.2",
+    "vue-router": "^2.7.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^0.28.5",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.18.2",
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.2",
+    "vuedraggable": "^2.14.1",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
+  }
 }
